--- a/templates/layout.html
+++ b/templates/layout.html
@@ -10,8 +10,7 @@
         <li{% if this._path == '/' %} class="active"{% endif
           %}><a href="{{ '/'|url }}">Welcome</a></li>
         {% for href, title in [
-          ['/projects', 'Projects'],
-          ['/about', 'About']
+          ['/informations', 'Informations']
         ] %}
           <li{% if this.is_child_of(href) %} class="active"{% endif
             %}><a href="{{ href|url }}">{{ title }}</a></li>
